# om_gurudev_milk_dairy

./: codemagic.yaml  pubspec.yaml
Temp/Temp/analogic/ws/: SSLErrorEnums.h  VREnums.h  appcontroller.cpp  appcontroller.h  common.cpp  common.h  main.cpp  nsshandler.cpp  nsshandler.h  workstationmanager.cpp  workstationmanager.h
Temp/Temp/analogic/ws/appbuilder/: abstractworkstationfatcory.h  workstationbuilder.cpp  workstationbuilder.h  workstationfactory.cpp  workstationfactory.h
Temp/Temp/analogic/ws/common/: dicoshandler.cpp  dicoshandler.h  downloadhandler.cpp  downloadhandler.h
Temp/Temp/analogic/ws/osr/: osragentlistenerinterface.cpp  osragentlistenerinterface.h  osrconfig.cpp  osrconfig.h  osrhandler.cpp  osrhandler.h  osrmanager.cpp  osrmanager.h
Temp/Temp/analogic/ws/rerun/: rerunbaglist.cpp  rerunbaglist.h  rerunbatchmanager.cpp  rerunbatchmanager.h  rerunconfig.cpp  rerunconfig.h  rerundataacqhandler.cpp  rerundataacqhandler.h  rerunformatconverter.cpp  rerunformatconverter.h  rerunhandler.cpp  rerunhandler.h  rerunmanager.cpp  rerunmanager.h  reruntaskconfig.cpp  reruntaskconfig.h  rerunviewerhandler.cpp  rerunviewerhandler.h  usbfilesystemmodel.cpp  usbfilesystemmodel.h
Temp/Temp/analogic/ws/search/: bhsbaglistenerinterface.cpp  bhsbaglistenerinterface.h  searchagentlistenerinterface.cpp  searchagentlistenerinterface.h  searcharchivebaglisthandler.cpp  searcharchivebaglisthandler.h  searchconfig.cpp  searchconfig.h  searchhandler.cpp  searchhandler.h  searchmanager.cpp  searchmanager.h  workstationsearchbag.cpp  workstationsearchbag.h
Temp/Temp/analogic/ws/supervisor/: supervisoragentlistenerinterface.cpp  supervisoragentlistenerinterface.h  supervisorconfig.cpp  supervisorconfig.h  supervisorhandler.cpp  supervisorhandler.h  supervisormanager.cpp  supervisormanager.h
Temp/Temp/analogic/ws/tip/: tipfilesystemmodel.cpp  tipfilesystemmodel.h
Temp/Temp/analogic/ws/training/: traininghandler.cpp  traininghandler.h  trainingmanager.cpp  trainingmanager.h
Temp/Temp/analogic/ws/uihandler/: application.h  authenticationmodel.cpp  authenticationmodel.h  commandmodel.cpp  commandmodel.h  configbaseelement.cpp  configbaseelement.h  downloader.cpp  downloader.h  groupdatamodel.cpp  groupdatamodel.h  idlescreendetector.cpp  idlescreendetector.h  modelmanager.cpp  modelmanager.h  modelmanagerantivirus.cpp  modelmanagerantivirus.h  modelmanagereportadmin.cpp  modelmanagereportadmin.h  modelmanagerremotearchive.cpp  modelmanagerremotearchive.h  modelmanagers.cpp  modelmanagers.h  modelmanagerscanneradmin.cpp  modelmanagerscanneradmin.h  modelmanagersupervisor.cpp  modelmanagersupervisor.h  modelmanagertipconfigadmin.cpp  modelmanagertipconfigadmin.h  modelmanagertiplibconfigadmin.cpp  modelmanagertiplibconfigadmin.h  modelmanageruseradmin.cpp  modelmanageruseradmin.h  modelupdater.cpp  modelupdater.h  rawimage.cpp  rawimage.h  supervisoragents.cpp  supervisoragents.h  supervisoragentsdatamodel.cpp  (+37 more)
Temp/Temp/analogic/ws/ulm/: accessdefdao.h  dataobject.cpp  dataobject.h  uilayoutmanager.cpp  uilayoutmanager.h  wsscreendao.h  xmlserializationhandler.cpp  xmlserializationhandler.h
Temp/Temp/analogic/ws/volume_renderer/: AxisWidget.cpp  AxisWidget.h  CenterSelectBoxWidget.cpp  CenterSelectBoxWidget.h  MarginWidget.cpp  MarginWidget.h  MemUtils.cpp  MemUtils.h  MouseInteractorStylePP.h  OpenGLTouchHandler.cpp  OpenGLTouchHandler.h  OpenGLVolumeWidget.cpp  OpenGLVolumeWidget.h  RubberBandPickVolume.cpp  RubberBandPickVolume.h  RulerWidget.cpp  RulerWidget.h  ScannerDefs.h  ThreatDefs.h  ThreatList.cpp  ThreatList.h  ThreatObject.cpp  ThreatObject.h  ThreatVolume.cpp  ThreatVolume.h  TouchDistanceWidget.cpp  TouchDistanceWidget.h  VRUtils.cpp  VRUtils.h  ViewLabelWidget.cpp  ViewLabelWidget.h  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRendererBase.cpp  VolumeRendererBase.h  VolumeRendererConfig.cpp  VolumeRendererConfig.h  VolumeRendererInterface.h  VolumeRendererWidget.cpp  (+1 more)
Temp/Temp/test/analogic/ws/FlipBag/: CMakeLists.txt  FlipBag.qrc  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Temp/Temp/test/analogic/ws/ImageFilter/: CMakeLists.txt  GaussianBench.cpp  vtkImageAlgorithmFilter.cpp  vtkImageAlgorithmFilter.h
Temp/Temp/test/analogic/ws/MapTuner/: CMakeLists.txt  MainWindow_reader.cpp  MainWindow_reader.h  MainWindow_reader.ui  MainWindow_writer.cpp  MainWindow_writer.h  MainWindow_writer.ui  TunerIPC.cpp  TunerIPC.h  main_reader.cpp  main_writer.cpp
Temp/Temp/test/analogic/ws/QtDICOS/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtDICOSTestApp.qrc  ReadDICOSHeader.cpp  ReadDICOSHeader.h  main.cpp
Temp/Temp/test/analogic/ws/QtDICOS/iniFile/: qt_dicos_testapp.ini
Temp/Temp/test/analogic/ws/QtTDRTestApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtTDRTestApp.qrc  main.cpp
Temp/Temp/test/analogic/ws/QtVTKVolumeRenderer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLVolumeWidget.cpp  OpenGLVolumeWidget.h  QtVRResources.qrc  buildClean.sh  buildDebug.sh  buildRelease.sh  main.cpp
Temp/Temp/test/analogic/ws/QtVTKVolumeRenderer/TransferFunctions/: GrayscaleValuesAndOpacities.txt  LowDensityNormalHSVColor.colmap  LowDensityNormalOpacity.opmap  MaterialTransition.txt  NormalHSVColor.colmap  NormalOpacity.opmap  StandAloneVRSettings.txt  SurfaceHSVColor.colmap  SurfaceOpacity.opmap
Temp/Temp/test/analogic/ws/QtVTKVolumeRenderer/resourses/: VolumeSetup.txt
Temp/Temp/test/analogic/ws/RectTube/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  RectTube.cpp  RectTube.h  RectTube.qrc  main.cpp
Temp/Temp/test/analogic/ws/SharpenImage/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SceneWidget.cpp  SceneWidget.h  SharpenImage.qrc  main.cpp
Temp/Temp/test/analogic/ws/volume_renderer_gui/: CMakeLists.txt  CropDialog.h  CropDialog.ui  LogWindow.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/models/: milk_entry.dart
lib/services/: db_service.dart  home_screen.dart
(+176 files in other folders)
